Fix style on mobile

--- a/style.css
+++ b/style.css
@@ -111,7 +111,7 @@ section.feat section.middle{
 }
 
 #slides{
-	width: 242px !important;
+	width: 205px !important;
 	height: 370px !important;
 	padding: 74px 20px !important;
 }
